--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -21,4 +21,9 @@
 // }
 
 // @import "../../node_modules/slick-carousel/slick/slick.scss";
+// @import "../../node_modules/@splidejs/splide/dist/css/splide-core.min.css";
 // @import "../../node_modules/animate.css/animate.min.css";
+
+// components
+@import "./components/dropdown_menu";
+@import "./components/sidenav";
