--- a/src/scss/bundle-rtl.scss
+++ b/src/scss/bundle-rtl.scss
@@ -17,14 +17,14 @@ $dir: "rtl";
 @import "./bootstrap-rtl/scss/reboot-rtl";
 @import "./bootstrap-rtl/scss/type-rtl";
 @import "./bootstrap-rtl/scss/grid";
-@import "./bootstrap-rtl/scss/dropdown-rtl";
+@import "./bootstrap-rtl/scss/utilities";
 @import "./bootstrap-rtl/scss/nav-rtl";
 @import "./bootstrap-rtl/scss/navbar-rtl";
 @import "./bootstrap-rtl/scss/buttons";
-@import "./bootstrap-rtl/scss/utilities";
-@import "./bootstrap-rtl/scss/transitions";
-@import "./bootstrap-rtl/scss/tables";
-@import "./bootstrap-rtl/scss/card-rtl";
-@import "./bootstrap-rtl/scss/root";
+// @import "./bootstrap-rtl/scss/dropdown-rtl";
+// @import "./bootstrap-rtl/scss/transitions";
+// @import "./bootstrap-rtl/scss/tables";
+// @import "./bootstrap-rtl/scss/card-rtl";
+// @import "./bootstrap-rtl/scss/root";
 
 @import "entry.scss";
