--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -118,64 +118,67 @@ $font-family-base: inherit !default;
         box-shadow: $horizontal $vertical $blur $spread $color;
     }
 }
-
 @mixin center($dir: "both") {
     position: absolute;
     @if $dir == "h" {
-        left: 50%;
-        transform: translateX(-50%);
+      @include appDirAuto($start: 50%);
+      @include appDirValue(transform, translateX(-50%), translateX(50%));
     }
     @if $dir == "v" {
-        top: 50%;
-        transform: translateY(-50%);
+      top: 50%;
+      transform: translateY(-50%);
     }
     @if $dir == "both" {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+      top: 50%;
+      @include appDirAuto($start: 50%);
+      @include appDirValue(
+        transform,
+        translate(-50%, -50%),
+        translate(50%, -50%)
+      );
     }
-}
+  }
 
 @mixin curve($position, $height, $hideAt: null, $inverse: null, $inset: null) {
     .curve {
-        position: absolute;
+      position: absolute;
+      width: 100%;
+      height: $height;
+      overflow: hidden;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      @include appDir(left, 0, right, 0);
+      @if $position == "top" {
+        @if $inset {
+          top: 0;
+        } @else {
+          top: #{-$height + 1px};
+        }
+      }
+      @if $position == "bottom" {
+        @if $inset {
+          bottom: 0;
+        } @else {
+          bottom: #{$height - 1px};
+        }
+      }
+      @if $hideAt {
+        @include media("<=" + $hideAt) {
+          display: none;
+        }
+      }
+      img {
         width: 100%;
-        height: $height;
-        overflow: hidden;
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
-        @include appDir(left, 0, right, 0);
-        @if $position == "top" {
-            @if $inset != null {
-                top: 0;
-            } @else {
-                top: #{-$height + 1px};
-            }
+        height: 100%;
+        @if $inverse {
+          @include appDir(transform, rotatey(180deg), null, null);
+        } @else {
+          @include appDir(null, null, transform, rotatey(180deg));
         }
-        @if $position == "bottom" {
-            @if $inset != null {
-                bottom: 0;
-            } @else {
-                bottom: #{$height - 1px};
-            }
-        }
-        @if $hideAt {
-            @include media("<=" + $hideAt) {
-                display: none;
-            }
-        }
-        img {
-            min-width: 100%;
-            max-height: 100%;
-            @if $inverse {
-                @include appDir(transform, rotatey(180deg), null, null);
-            } @else {
-                @include appDir(null, null, transform, rotatey(180deg));
-            }
-        }
+      }
     }
-}
+  }
 
 @mixin my-pagination() {
     margin: 30px 0;
@@ -381,7 +384,33 @@ $font-family-base: inherit !default;
         #{$property}: $rtl_value;
     }
 }
-
+@mixin splide(
+  $dots: true,
+  $splide_dot_color: gray,
+  $splide_dot_color_active: $primary,
+  $splide_dot_circle_size: 16px,
+  $splide_dot_opacity_default: 0.75
+) {
+  @if ($dots) {
+    .splide__pagination {
+      bottom: 14%;
+      padding: 0;
+      @include center("h");
+      button {
+        border: none;
+        @include circle($splide_dot_circle_size);
+        background-color: $splide_dot_color;
+        opacity: $splide_dot_opacity_default;
+        &.is-active {
+          background-color: $splide_dot_color_active;
+          opacity: 1;
+        }
+        @include appDirAuto($margin-end: 10px);
+      }
+    }
+  }
+  @content;
+}
 @mixin slick(
     $slick-arrow-color: black,
     $slick-arrow-shape-color: white,
