--- a/src/scss/helpers/_sidenav.scss
+++ b/src/scss/helpers/_sidenav.scss
@@ -1,10 +1,12 @@
+@use 'mixins' as *;
+
 .sidenav {
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 5;
   top: 0;
-  @include h.appDirAuto($start: 0);
+  @include appDirAuto($start: 0);
   background-color: #3c4b54;
   overflow-x: hidden;
   transition: 0.5s;
@@ -24,18 +26,35 @@
     .closebtn {
       font-size: 36px;
       color: white;
-      @include hover-focus-active() {
+      &:hover, &:focus, &:active {
         text-decoration: none;
       }
     }
   }
   ul {
-    @include h.appDirAuto($padding-start: 0);
+    @include appDirAuto($padding-start: 0);
     list-style: none;
     li {
       overflow: hidden;
       padding: 0;
       position: relative;
+      &.menu-icon {
+        display: grid;
+        grid-template-columns: auto;
+        grid-auto-flow: column dense;
+        img {
+          width: 30px;
+          height: auto;
+          align-self: center;
+          justify-self: flex-start;
+          @include appDirAuto($margin-start: 40px);
+        }
+        a {
+          @include appDirAuto($padding-start: 10px);
+          align-self: center;
+          justify-self: flex-start;
+        }
+      }
       &.menu-item-has-children {
         &::after {
           position: absolute;
@@ -43,7 +62,7 @@
           color: white;
           font-size: 1.7rem;
           content: "\002B";
-          @include h.appDirAuto($end: 40px);
+          @include appDirAuto($end: 40px);
         }
         &.child-menu-opened {
           &::after {
@@ -58,7 +77,7 @@
         font-weight: 500;
         padding-top: 15px;
         padding-bottom: 15px;
-        @include h.appDirAuto($padding-start: 40px);
+        @include appDirAuto($padding-start: 40px);
       }
     }
     &.sub-menu {
@@ -73,7 +92,7 @@
         height: 100%;
         content: "";
         background-color: white;
-        @include h.appDirAuto($start: 0);
+        @include appDirAuto($start: 0);
         top: 0;
       }
     }
