fixed firefox select height and the select placeholder color and selected color with javascript

--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -1065,7 +1065,12 @@ $admin: false !default;
           position: relative;
         }
       }
-
+      select {
+        line-height: $field-min-height;
+        &.untouched {
+          color: $field-placeholder-color;
+        }
+      }
       .wpcf7-list-item {
         @include appDirLtr() {
           margin-left: 0;
