now the helpers import in entry is alot nicer and and other variables could be declared in bootvars

--- a/src/scss/helpers/_dropdown_menu.scss
+++ b/src/scss/helpers/_dropdown_menu.scss
@@ -1,6 +1,5 @@
 @use 'mixins' as *;
-$body-color: black !default;
-$secondary: $secondary !default;
+@use "../bootvars" as *;
 
 $menu-border-radius: 5px;
 
