the helper module only has varaibles and mixins now ... as it should

--- a/src/scss/_entry-admin.scss
+++ b/src/scss/_entry-admin.scss
@@ -1,8 +1,6 @@
-@use "helpers/blocks/itc-block" with (
-    $admin: $admin
-);
-@use "helpers/blocks/pwb-block" with (
-    $admin: $admin
+@use "sass:meta";
+@use "helpers" as h with (
+    $dir: $dir,
 );
 
 .wp-block {
