--- a/src/scss/_entry.scss
+++ b/src/scss/_entry.scss
@@ -23,3 +23,9 @@
 // }
 // @import "../../node_modules/slick-carousel/slick/slick.scss";
 // @import "../../node_modules/animate.css/animate.min.css";
+
+// helpers
+@import "./helpers/dropdown_menu";
+@import "./helpers/splide";
+@import "./helpers/sidenav";
+@import "./helpers/helpers";
