--- a/src/scss/helpers/_index.scss
+++ b/src/scss/helpers/_index.scss
@@ -1,10 +1,6 @@
 @forward "queries";
 @forward "animations";
 @forward "mixins";
-@forward 'helpers';
-@forward "splide";
-@forward "dropdown_menu";
-@forward "sidenav";
 
-@forward "blocks/itc-block";
-@forward "blocks/pwb-block";
+// @forward "blocks/itc-block";
+// @forward "blocks/pwb-block";
