--- a/src/scss/helpers/_dropdown_menu.scss
+++ b/src/scss/helpers/_dropdown_menu.scss
@@ -1,6 +1,3 @@
-@use 'mixins' as *;
-@use "../bootvars" as *;
-
 $menu-border-radius: 5px;
 
 .navbar .has-megamenu {
@@ -45,7 +42,7 @@ $menu-border-radius: 5px;
   cursor: pointer;
 }
 .dropdown-menu {
-  @include center('h');
+  @include h.center('h');
   background-color: white;
   position: absolute;
   min-width: 260px;
@@ -56,9 +53,9 @@ $menu-border-radius: 5px;
   display: none;
   border-radius: $menu-border-radius;
   &::after {
-    @include arrow('up', white, 5px, 5px, 'solid');
+    @include h.arrow('up', white, 5px, 5px, 'solid');
     content: "";
-    @include center('h');
+    @include h.center('h');
     top: -5px;
   }
   box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%);
@@ -77,7 +74,7 @@ $menu-border-radius: 5px;
     img {
       max-height: 50px;
       max-width: 30px;
-      @include appDirAuto($margin-end: 10px, $margin-start: 15px);
+      @include h.appDirAuto($margin-end: 10px, $margin-start: 15px);
     }
     &:first-of-type {
       border-top-left-radius: $menu-border-radius;
@@ -92,7 +89,7 @@ $menu-border-radius: 5px;
     }
   }
   .dropdown-menu {
-    @include appDirAuto($start: 160px);
+    @include h.appDirAuto($start: 160px);
     top: 0;
     box-shadow: none;
     &::after {
@@ -109,11 +106,11 @@ $menu-border-radius: 5px;
 .dropdown {
   position: relative;
   display: inline-block;
-  @include appDirAuto($padding-end: 15px);
+  @include h.appDirAuto($padding-end: 15px);
   &::after {
     position: absolute;
     top: 10px;
-    @include appDirAuto($end: 5px);
+    @include h.appDirAuto($end: 5px);
     content: "\002B";
     color: $secondary;
   }
